Pipeline devops test and build

--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -44,4 +44,4 @@ steps:
     uses: docker/build-push-action@v5
     with:     
         push: true
-        tags: ${{ secrets.DOCKERHUB_USERNAME }}/devops-labs:latest
+        tags: ${{ secrets.DOCKERHUB_USERNAME }}/devops-lab:latest
