Updating CD pipeline

--- a/.github/workflows/cd-pipeline.yml
+++ b/.github/workflows/cd-pipeline.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Deploy Container App
         uses: azure/container-apps-deploy-action@v1
         with:
-          imageToDeploy: ${{ secrets.DOCKERHUB_USERNAME }}/devops-labs:latest
+          imageToDeploy: ${{ secrets.DOCKERHUB_USERNAME }}/devops-lab:latest
           containerAppName: devops-app
           containerAppEnvironment: devops-app-env
           resourceGroup: devsecops-lab
