--- a/.github/workflows/cd-pipeline.yml
+++ b/.github/workflows/cd-pipeline.yml
@@ -31,9 +31,7 @@ jobs:
 
       - name: Install jq
         run: |
-          curl -L -o /tmp/jq https://stedolan.github.io/jq/download/linux64/jq
-          chmod +x /tmp/jq
-          export PATH=$PATH:/tmp
+          tdnf install -y jq
 
       - name: Azure CLI script
         id: token-gen
